--- a/app/src/main/res/layout/navigation_bar.xml
+++ b/app/src/main/res/layout/navigation_bar.xml
@@ -34,4 +34,14 @@
         android:src="@null"
         android:visibility="gone"
         app:layout_widthPercent="100%h" />
+
+    <Button
+        android:id="@+id/btnRight"
+        android:layout_width="@dimen/zero_dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/action_bar_bg"
+        android:src="@null"
+        android:visibility="gone"
+        app:layout_widthPercent="100%h" />
 </com.zhy.android.percent.support.PercentRelativeLayout>
