--- a/app/src/main/res/layout/layout_contractor_details.xml
+++ b/app/src/main/res/layout/layout_contractor_details.xml
@@ -19,7 +19,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/llButton"
+        android:layout_above="@+id/llButtons"
         android:layout_below="@+id/actionBar"
         android:background="@null">
 
@@ -314,6 +314,45 @@
                     android:textSize="@dimen/fourteen_sp" />
             </RelativeLayout>
 
+            <RelativeLayout
+                android:id="@+id/rlRemarks"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/one_dp"
+                    android:layout_marginLeft="@dimen/ten_dp"
+                    android:layout_marginRight="@dimen/ten_dp"
+                    android:background="@color/gray" />
+
+                <TextView
+                    android:id="@+id/txtRemarks"
+                    android:layout_width="@dimen/eighty_dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:background="@null"
+                    android:gravity="right|center"
+                    android:text="@string/remarks"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/fourteen_sp" />
+
+                <EditText
+                    android:id="@+id/edtRemarks"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/five_dp"
+                    android:layout_marginRight="@dimen/ten_dp"
+                    android:layout_marginTop="@dimen/five_dp"
+                    android:layout_toRightOf="@+id/txtRemarks"
+                    android:background="@drawable/gray_stroke_white_solid_bg"
+                    android:gravity="left|center"
+                    android:minHeight="@dimen/eighty_dp"
+                    android:padding="@dimen/five_dp"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/fourteen_sp" />
+            </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/rlFixedPoint"
