--- a/app/src/main/res/layout/dialog_prompt.xml
+++ b/app/src/main/res/layout/dialog_prompt.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.android.percent.support.PercentLinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -28,7 +27,7 @@
                 android:layout_height="match_parent"
                 android:gravity="left|center"
                 android:paddingLeft="10dp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -42,8 +41,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="left|center"
-                android:paddingLeft="10dp"
-                android:textColor="@color/black"/>
+                android:paddingLeft="@dimen/ten_dp"
+                android:paddingRight="@dimen/ten_dp"
+                android:textColor="@color/black" />
         </RelativeLayout>
 
         <LinearLayout
@@ -62,7 +62,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/btn_white"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black" />
 
             <Button
                 android:id="@+id/query_setting_btn"
@@ -72,7 +72,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/btn_blue"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white" />
         </LinearLayout>
     </com.zhy.android.percent.support.PercentLinearLayout>
 
