--- a/app/src/main/res/layout/navigation_bar.xml
+++ b/app/src/main/res/layout/navigation_bar.xml
@@ -23,27 +23,33 @@
         android:gravity="center"
         android:text="@string/app_name"
         android:textColor="@color/white"
-        android:textSize="@dimen/twenty_sp" />
+        android:textSize="@dimen/sixteen_sp" />
 
-    <ImageButton
-        android:id="@+id/imgBtnRight"
-        android:layout_width="@dimen/zero_dp"
+    <com.zhy.android.percent.support.PercentLinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
-        android:background="@drawable/action_bar_bg"
-        android:src="@null"
-        android:visibility="gone"
-        app:layout_widthPercent="100%h" />
+        android:background="@null"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btnRight"
-        android:layout_width="@dimen/zero_dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:background="@drawable/action_bar_bg"
-        android:src="@null"
-        android:textColor="@color/white"
-        android:textSize="@dimen/fourteen_sp"
-        android:visibility="gone"
-        app:layout_widthPercent="100%h" />
+        <ImageButton
+            android:id="@+id/imgBtnRight"
+            android:layout_width="@dimen/zero_dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/action_bar_bg"
+            android:src="@drawable/search_btn"
+            android:visibility="gone"
+            app:layout_widthPercent="100%h" />
+
+        <Button
+            android:id="@+id/btnRight"
+            android:layout_width="@dimen/zero_dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/action_bar_bg"
+            android:src="@null"
+            android:textColor="@color/white"
+            android:textSize="@dimen/fourteen_sp"
+            android:visibility="gone"
+            app:layout_widthPercent="100%h" />
+    </com.zhy.android.percent.support.PercentLinearLayout>
 </com.zhy.android.percent.support.PercentRelativeLayout>
