--- a/app/src/main/res/layout/layout_working_procedure.xml
+++ b/app/src/main/res/layout/layout_working_procedure.xml
@@ -140,6 +140,15 @@
                 android:textSize="@dimen/fourteen_sp" />
 
         </LinearLayout>
-
     </RelativeLayout>
+
+    <com.mancj.materialsearchbar.MaterialSearchBar
+        android:id="@+id/searchBar"
+        style="@style/MaterialSearchBarLight"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        app:mt_hint="@string/input_working_name"
+        app:mt_maxSuggestionsCount="10"
+        app:mt_speechMode="false" />
 </com.zhy.android.percent.support.PercentRelativeLayout>
