--- a/app/src/main/res/layout/item_process_manager.xml
+++ b/app/src/main/res/layout/item_process_manager.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.mcxtzhang.swipemenulib.SwipeMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/fifty_dp"
     android:clickable="true">
@@ -47,4 +47,4 @@
         android:textColor="@color/white"
         android:textSize="@dimen/fourteen_sp" />
 
-</com.mcxtzhang.swipemenulib.SwipeMenuLayout>
+</LinearLayout>
