--- a/app/src/main/res/layout/layout_progress_manager.xml
+++ b/app/src/main/res/layout/layout_progress_manager.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.android.percent.support.PercentLinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,14 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/zero_dp"
         android:layout_alignParentTop="true"
-        app:layout_heightPercent="8%" />
+        app:layout_heightPercent="8%"/>
 
-    <android.support.v7.widget.RecyclerView
+    <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
         android:id="@+id/rvTimeLineWaterfallFlow"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/ten_dp"
         android:background="@null"
-        android:scrollbars="none" />
+        android:scrollbars="none"/>
 
 </com.zhy.android.percent.support.PercentLinearLayout>
