--- a/app/src/main/res/layout/layout_quality_safety_details.xml
+++ b/app/src/main/res/layout/layout_quality_safety_details.xml
@@ -80,42 +80,6 @@
                 </RelativeLayout>
             </LinearLayout>
 
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/one_dp"
-                android:layout_marginLeft="@dimen/ten_dp"
-                android:layout_marginRight="@dimen/ten_dp"
-                android:background="@color/gray" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:gravity="center_vertical"
-                android:minHeight="@dimen/forty"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="@dimen/eighty_dp"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:gravity="right|center"
-                    android:text="@string/check_date"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/fourteen_sp" />
-
-                <TextView
-                    android:id="@+id/txtEntryTime"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/forty"
-                    android:layout_marginRight="@dimen/ten_dp"
-                    android:background="@null"
-                    android:gravity="left|center"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/fourteen_sp" />
-            </LinearLayout>
-
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/one_dp"
@@ -168,9 +132,10 @@
 
                 <TextView
                     android:id="@+id/txtHiddenTroubleHeadline"
-                    android:layout_width="@dimen/eighty_dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/ten_dp"
                     android:background="@null"
                     android:gravity="right|center"
                     android:text="@string/hiddenTroubleHeadline"
@@ -255,6 +220,41 @@
                 </RadioGroup>
 
             </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/one_dp"
+                android:layout_marginLeft="@dimen/ten_dp"
+                android:layout_marginRight="@dimen/ten_dp"
+                android:background="@color/gray" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:gravity="center_vertical"
+                android:minHeight="@dimen/forty"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="@dimen/eighty_dp"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:gravity="right|center"
+                    android:text="@string/check_date"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/fourteen_sp" />
+
+                <TextView
+                    android:id="@+id/txtEntryTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/forty"
+                    android:layout_marginRight="@dimen/ten_dp"
+                    android:background="@null"
+                    android:gravity="left|center"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/fourteen_sp" />
+            </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
