--- a/app/src/main/res/layout/layout_contractor_details.xml
+++ b/app/src/main/res/layout/layout_contractor_details.xml
@@ -36,6 +36,43 @@
                 android:minHeight="@dimen/forty">
 
                 <TextView
+                    android:id="@+id/bidsPath"
+                    android:layout_width="@dimen/eighty_dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:background="@null"
+                    android:gravity="right|center"
+                    android:text="@string/bidsPath"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/fourteen_sp" />
+
+                <TextView
+                    android:id="@+id/txtBidsPath"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/ten_dp"
+                    android:layout_toRightOf="@+id/bidsPath"
+                    android:background="@null"
+                    android:gravity="left|center"
+                    android:minHeight="@dimen/forty"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/fourteen_sp" />
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/one_dp"
+                android:layout_marginLeft="@dimen/ten_dp"
+                android:layout_marginRight="@dimen/ten_dp"
+                android:background="@color/gray" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:minHeight="@dimen/forty">
+
+                <TextView
                     android:id="@+id/workingName"
                     android:layout_width="@dimen/eighty_dp"
                     android:layout_height="wrap_content"
