--- a/app/src/main/res/layout/layout_working_procedure.xml
+++ b/app/src/main/res/layout/layout_working_procedure.xml
@@ -23,80 +23,143 @@
         <LinearLayout
             android:id="@+id/llTabs"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/fifty_one_dp"
-            android:background="@color/v_2_tab_color"
+            android:layout_height="@dimen/sixty_two_dp"
+            android:background="@color/white"
             android:orientation="horizontal">
 
             <RelativeLayout
                 android:id="@+id/rlPhoto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginRight="@dimen/one_px"
                 android:layout_weight="1"
-                android:background="@color/white"
+                android:background="@drawable/touch_bg"
                 android:orientation="vertical">
 
-                <Button
+                <TextView
                     android:id="@+id/btnTakePicture"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/thirty"
+                    android:layout_centerHorizontal="true"
+                    android:background="@null"
+                    android:drawableLeft="@drawable/enterprise_info"
+                    android:drawablePadding="@dimen/ten_dp"
+                    android:gravity="center"
+                    android:text="@string/take_picture"
+                    android:textColor="@color/tab_1"
+                    android:textSize="@dimen/fourteen_sp" />
+
+                <TextView
+                    android:id="@+id/txtTakePhoto"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/fifty_dp"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/touch_bg"
-                    android:textColor="@color/main_check_bg" />
+                    android:layout_height="@dimen/thirty"
+                    android:layout_below="@+id/btnTakePicture"
+                    android:gravity="top|center"
+                    android:text="12"
+                    android:textColor="@color/tab_1"
+                    android:textSize="@dimen/twenty_sp"
+                    android:textStyle="bold" />
 
                 <View
                     android:id="@+id/vTakePicture"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/one_dp"
-                    android:layout_below="@+id/btnTakePicture"
+                    android:layout_height="@dimen/two_dp"
+                    android:layout_below="@+id/txtTakePhoto"
                     android:background="@color/main_check_bg" />
             </RelativeLayout>
 
+            <View
+                android:layout_width="@dimen/one_dp"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/ten_dp"
+                android:layout_marginTop="@dimen/ten_dp"
+                android:background="@color/dark_grey" />
+
             <RelativeLayout
+                android:id="@+id/rlUnSubmit"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginRight="@dimen/one_px"
                 android:layout_weight="1"
-                android:background="@color/white"
+                android:background="@drawable/touch_bg"
                 android:orientation="vertical">
 
-                <Button
+                <TextView
                     android:id="@+id/btnToBeAudited"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/thirty"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:background="@null"
+                    android:drawableLeft="@drawable/unsubmitted"
+                    android:drawablePadding="@dimen/ten_dp"
+                    android:gravity="center"
+                    android:text="@string/unSubmit"
+                    android:textColor="@color/tab_2"
+                    android:textSize="@dimen/fourteen_sp" />
+
+                <TextView
+                    android:id="@+id/txtUnSubmit"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/fifty_dp"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/touch_bg"
-                    android:textColor="@color/black" />
+                    android:layout_height="@dimen/thirty"
+                    android:layout_below="@+id/btnToBeAudited"
+                    android:gravity="top|center"
+                    android:textColor="@color/tab_2"
+                    android:textSize="@dimen/twenty_sp"
+                    android:textStyle="bold" />
 
                 <View
                     android:id="@+id/vToBeAudited"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/one_dp"
-                    android:layout_below="@+id/btnToBeAudited"
-                    android:background="@color/black" />
+                    android:layout_height="@dimen/two_dp"
+                    android:layout_below="@+id/txtUnSubmit"
+                    android:background="@color/dark_grey" />
             </RelativeLayout>
 
+            <View
+                android:layout_width="@dimen/one_dp"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/ten_dp"
+                android:layout_marginTop="@dimen/ten_dp"
+                android:background="@color/dark_grey" />
+
             <RelativeLayout
+                android:id="@+id/rlSubmitting"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginRight="@dimen/one_px"
                 android:layout_weight="1"
-                android:background="@color/white"
+                android:background="@drawable/touch_bg"
                 android:orientation="vertical">
 
-                <Button
+                <TextView
                     android:id="@+id/btnFinish"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/thirty"
+                    android:layout_centerHorizontal="true"
+                    android:background="@null"
+                    android:drawableLeft="@drawable/submission"
+                    android:drawablePadding="@dimen/ten_dp"
+                    android:gravity="center"
+                    android:text="@string/submission"
+                    android:textColor="@color/tab_3"
+                    android:textSize="@dimen/fourteen_sp" />
+
+                <TextView
+                    android:id="@+id/txtSubmit"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/fifty_dp"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/touch_bg"
-                    android:textColor="@color/black" />
+                    android:layout_height="@dimen/thirty"
+                    android:layout_below="@+id/btnFinish"
+                    android:gravity="top|center"
+                    android:textColor="@color/tab_3"
+                    android:textSize="@dimen/twenty_sp"
+                    android:textStyle="bold" />
 
                 <View
                     android:id="@+id/vFinish"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/one_dp"
-                    android:layout_below="@+id/btnFinish"
-                    android:background="@color/black" />
+                    android:layout_height="@dimen/two_dp"
+                    android:layout_below="@+id/txtSubmit"
+                    android:background="@color/dark_grey" />
             </RelativeLayout>
         </LinearLayout>
 
