--- a/app/src/main/res/layout/item_to_do_take_photo.xml
+++ b/app/src/main/res/layout/item_to_do_take_photo.xml
@@ -7,7 +7,8 @@
     android:layout_marginRight="@dimen/ten_dp"
     android:layout_marginTop="@dimen/five_dp"
     android:background="@drawable/gray_stroke_white_solid_bg"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/one_dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -30,7 +31,8 @@
             android:layout_height="@dimen/twenty_dp"
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/five_dp"
-            android:layout_toLeftOf="@+id/txtReviewProgress" />
+            android:layout_toLeftOf="@+id/txtReviewProgress"
+            android:background="@drawable/progress" />
 
         <TextView
             android:id="@+id/txtProcedureName"
@@ -57,6 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/one_dp"
         android:layout_marginRight="@dimen/one_dp"
+        android:layout_marginBottom="@dimen/one_dp"
         android:background="@drawable/touch_bg">
 
         <TextView
@@ -87,25 +90,25 @@
         android:layout_height="@dimen/one_dp"
         android:layout_marginLeft="@dimen/ten_dp"
         android:layout_marginRight="@dimen/ten_dp"
-        android:background="@color/gray" />
+        android:background="@color/gray"
+        android:visibility="gone" />
 
     <RelativeLayout
         android:id="@+id/rlBottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@null"
-        android:minHeight="@dimen/thirty_five">
+        android:minHeight="@dimen/thirty_five"
+        android:visibility="gone">
 
-        <TextView
+        <ImageView
             android:id="@+id/imgViewTakePhoto"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/twenty_dp"
             android:layout_height="@dimen/twenty_dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/ten_dp"
-            android:background="@null"
-            android:textColor="@color/black"
-            android:textSize="@dimen/twelve_sp" />
+            android:background="@drawable/take_photos" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -120,8 +123,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="@dimen/ten_dp"
                 android:layout_marginRight="@dimen/five_dp"
-                android:background="@drawable/progress_state"
-                android:visibility="gone" />
+                android:background="@drawable/progress_state" />
 
             <TextView
                 android:id="@+id/txtProcedureState"
@@ -133,15 +135,13 @@
                 android:gravity="center"
                 android:maxHeight="@dimen/thirty_five"
                 android:textColor="@color/black"
-                android:textSize="@dimen/twelve_sp"
-                android:visibility="gone" />
+                android:textSize="@dimen/twelve_sp" />
 
             <ImageView
                 android:id="@+id/imgViewPersonals"
                 android:layout_width="@dimen/twenty_dp"
                 android:layout_height="@dimen/twenty_dp"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/ten_dp"
                 android:layout_marginRight="@dimen/five_dp"
                 android:layout_toRightOf="@+id/txtProcedureState"
                 android:background="@drawable/personals" />
