--- a/app/src/main/res/layout/layout_msg.xml
+++ b/app/src/main/res/layout/layout_msg.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
+    android:background="#EFEFEF"
     android:orientation="vertical">
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/txtNOAnyData"
-            android:background="@color/gray"
+            android:background="#EFEFEF"
             android:paddingBottom="@dimen/five_dp"
             android:scrollbars="none" />
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
@@ -36,10 +36,20 @@
         android:visibility="gone" />
 
     <Button
+        android:id="@+id/ivLogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:background="@null"
+        android:drawableTop="@drawable/no_data"
+        android:text="@string/no_msg"
+        android:visibility="gone" />
+
+    <Button
         android:id="@+id/btnNoProcessAdd"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/one_hundred_and_fifty_dp"
-        android:layout_centerVertical="true"
+        android:layout_height="@dimen/forty"
+        android:layout_alignParentBottom="true"
         android:layout_margin="@dimen/ten_dp"
         android:background="@drawable/btn_blue"
         android:text="@string/add"
@@ -47,30 +57,45 @@
         android:textSize="@dimen/fourteen_sp"
         android:visibility="gone" />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/llSearchData"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@null"
-        android:gravity="center"
-        android:orientation="horizontal"
         android:visibility="gone">
 
-        <TextView
-            android:id="@+id/txtMsg"
+        <Button
+            android:id="@+id/btnNoData"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/no_msg"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sixteen_sp" />
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:background="@null"
+            android:drawableTop="@drawable/no_data" />
 
-        <TextView
-            android:id="@+id/txtClear"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="清空条件"
-            android:textColor="@color/main_bg"
-            android:textSize="@dimen/sixteen_sp" />
-    </LinearLayout>
+            android:layout_below="@+id/btnNoData"
+            android:gravity="center"
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/txtMsg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/no_msg"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sixteen_sp" />
+
+            <TextView
+                android:id="@+id/txtClear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="清空条件"
+                android:textColor="@color/main_bg"
+                android:textSize="@dimen/sixteen_sp" />
+
+        </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
