--- a/app/src/main/res/layout/layout_my_setting.xml
+++ b/app/src/main/res/layout/layout_my_setting.xml
@@ -118,6 +118,23 @@
         android:background="@color/gray" />
 
     <Button
+        android:id="@+id/btnCleanLocalCaching"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/fifty_dp"
+        android:background="@drawable/touch_bg"
+        android:gravity="left|center"
+        android:paddingLeft="@dimen/ten_dp"
+        android:text="@string/clean_local_caching"
+        android:textColor="@color/dark_grey"
+        android:textSize="@dimen/sixteen_sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/one_dp"
+        android:background="@color/gray" />
+
+    <Button
         android:id="@+id/btnSyncProcessDictionary"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
