--- a/app/src/main/res/layout/layout_search.xml
+++ b/app/src/main/res/layout/layout_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,15 +18,18 @@
         android:id="@+id/lvSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/actionBar"
         android:scrollbars="none" />
 
     <TextView
         android:id="@+id/txtNoSearch"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:drawableTop="@drawable/no_data"
         android:gravity="center"
+        android:visibility="gone"
         android:text="@string/noSearchContext"
         android:textColor="@color/black"
-        android:textSize="@dimen/twenty_sp"
-        android:visibility="gone" />
-</com.zhy.android.percent.support.PercentLinearLayout>
+        android:textSize="@dimen/fourteen_sp" />
+</com.zhy.android.percent.support.PercentRelativeLayout>
