--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="sixty_dp">60dp</dimen>
     <dimen name="sixty_one_dp">61dp</dimen>
     <dimen name="sevenTy_dp">70dp</dimen>
+    <dimen name="sixty_two_dp">62dp</dimen>
     <dimen name="seventy_five_dp">75dp</dimen>
     <dimen name="eighty_dp">80dp</dimen>
     <dimen name="ninety_dp">90dp</dimen>
@@ -32,6 +33,7 @@
     <dimen name="fourteen_sp">14sp</dimen>
     <dimen name="sixteen_sp">16sp</dimen>
     <dimen name="twenty_sp">20sp</dimen>
+    <dimen name="twenty_five_sp">25sp</dimen>
 
     <dimen name="one_px">1px</dimen>
     <dimen name="two_px">2px</dimen>
